fixed over scroll on the x axis on mobile on android on firefox

--- a/style7.css
+++ b/style7.css
@@ -34,6 +34,7 @@ body {
     background-color: #363738;
     background-position: top;
     font-family: Arial Black, Arial, sans-serif;
+    overscroll-behavior-x: none;
 }
 
 
